work, work, work

--- a/Nutrition_Patterns_Investigation.ipynb
+++ b/Nutrition_Patterns_Investigation.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "1723d8f0",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First 5 components explain: 23.9%\n",
+      "First 30 components explain: 70.5%\n",
       "Components needed for 70% variance: 30\n"
      ]
     },
@@ -425,10 +425,11 @@
    ],
    "source": [
     "\n",
-    "print(f\"First 5 components explain: {sum(pca.explained_variance_ratio_[:5]):.1%}\")\n",
+    "n_components = 30\n",
+    "\n",
+    "print(f\"First {n_components} components explain: {sum(pca.explained_variance_ratio_[:n_components]):.1%}\")\n",
     "print(f\"Components needed for 70% variance: {np.where(cumulative > 0.7)[0][0] + 1}\")\n",
     "\n",
-    "n_components = 5  # Choose based on scree plot elbow\n",
     "pca_final = PCA(n_components=n_components)\n",
     "components = pca_final.fit_transform(food_data_z)\n",
     "\n",
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "8b204fa2",
    "metadata": {},
    "outputs": [
@@ -509,7 +510,232 @@
       "  + Coffee: 0.261\n",
       "  - White_Bread: 0.249\n",
       "  - Cakes: 0.239\n",
-      "  - Mayonnaise: 0.207\n"
+      "  - Mayonnaise: 0.207\n",
+      "\n",
+      "PC6:\n",
+      "  + Honey_Marmalade: 0.325\n",
+      "  + Olive_Oil_Freq: 0.295\n",
+      "  + Cakes: 0.287\n",
+      "  + Chocolate: 0.229\n",
+      "  - Spinach: 0.229\n",
+      "  + Coffee: 0.211\n",
+      "  + Sweets_Preserved: 0.209\n",
+      "\n",
+      "PC7:\n",
+      "  + Milk_Yoghurt: 0.414\n",
+      "  - Milk_Yoghurt_LowFat: 0.276\n",
+      "  - Wine: 0.228\n",
+      "  + Meat_Balls: 0.217\n",
+      "  - Honey_Marmalade: 0.206\n",
+      "  + Yellow_Cheese: 0.204\n",
+      "  + Chicken: 0.188\n",
+      "\n",
+      "PC8:\n",
+      "  + Milk_Yoghurt_LowFat: 0.367\n",
+      "  - Milk_Yoghurt: 0.304\n",
+      "  + Chicken: 0.291\n",
+      "  + Winter_Fruits_Misc: 0.238\n",
+      "  + Margarine_Freq: 0.218\n",
+      "  - Summer_Fruits_Misc: 0.203\n",
+      "  - Seafood_Misc: 0.197\n",
+      "\n",
+      "PC9:\n",
+      "  + Wholemeal_Bread: 0.361\n",
+      "  - White_Bread: 0.292\n",
+      "  - Cheese_LowFat: 0.268\n",
+      "  + Margarine_Freq: 0.244\n",
+      "  + Pies: 0.220\n",
+      "  - Meat_Cold_Sliced_LowFat: 0.217\n",
+      "  + Feta_Cheese: 0.209\n",
+      "\n",
+      "PC10:\n",
+      "  + Fish_Large: 0.330\n",
+      "  + Seafood_Misc: 0.302\n",
+      "  - Tomato_Cucumber_Carrot_Pepper: 0.285\n",
+      "  - Seed_Oil_Freq: 0.281\n",
+      "  + Fish_Small: 0.223\n",
+      "  - Lettuce_Cabbage_Spinach_Rocket: 0.185\n",
+      "  - Legumes: 0.178\n",
+      "\n",
+      "PC11:\n",
+      "  + Wholemeal_Bread: 0.314\n",
+      "  - White_Bread: 0.311\n",
+      "  + Meat_Cold_Sliced: 0.296\n",
+      "  - Fish_Small: 0.260\n",
+      "  - Fish_Large: 0.236\n",
+      "  + Pork: 0.207\n",
+      "  - Feta_Cheese: 0.201\n",
+      "\n",
+      "PC12:\n",
+      "  + Feta_Cheese: 0.335\n",
+      "  - Seed_Oil_Freq: 0.288\n",
+      "  + Nuts: 0.288\n",
+      "  - Fish_Large: 0.235\n",
+      "  + Fruits_Dried: 0.218\n",
+      "  - Honey_Marmalade: 0.211\n",
+      "  - Tea: 0.205\n",
+      "\n",
+      "PC13:\n",
+      "  + Meat_Cold_Sliced: 0.330\n",
+      "  - Fruits_Dried: 0.318\n",
+      "  - Tea: 0.318\n",
+      "  + Fish_Large: 0.296\n",
+      "  + Meat_Cold_Sliced_LowFat: 0.218\n",
+      "  + Coffee: 0.180\n",
+      "  + Yellow_Cheese: 0.169\n",
+      "\n",
+      "PC14:\n",
+      "  + Olives: 0.317\n",
+      "  + Seed_Oil_Freq: 0.311\n",
+      "  - Veal: 0.264\n",
+      "  + Tea: 0.262\n",
+      "  + Margarine_Freq: 0.255\n",
+      "  - Orange: 0.246\n",
+      "  + Nuts: 0.209\n",
+      "\n",
+      "PC15:\n",
+      "  + Pasta_Wholemeal: 0.380\n",
+      "  + Potatoes_Boiled: 0.333\n",
+      "  + Brown_Rice: 0.293\n",
+      "  + Seed_Oil_Freq: 0.274\n",
+      "  + Pies: 0.204\n",
+      "  - Meat_Balls: 0.198\n",
+      "  - Chocolate: 0.192\n",
+      "\n",
+      "PC16:\n",
+      "  + Meat_Cold_Sliced_LowFat: 0.446\n",
+      "  + Pastitsio_Moussaka_Papoutsakia: 0.302\n",
+      "  + Fish_Small: 0.266\n",
+      "  + Lamb_Goat_Game: 0.258\n",
+      "  - Chocolate: 0.228\n",
+      "  - Yellow_Cheese: 0.214\n",
+      "  - Salty_Snacks: 0.211\n",
+      "\n",
+      "PC17:\n",
+      "  + Sausages: 0.294\n",
+      "  - Potatoes_Fried: 0.288\n",
+      "  - Seed_Oil_Freq: 0.262\n",
+      "  - Orange: 0.261\n",
+      "  - Apples_Pears: 0.254\n",
+      "  - Veal: 0.221\n",
+      "  + Fruits_Dried: 0.211\n",
+      "\n",
+      "PC18:\n",
+      "  + Eggs: 0.273\n",
+      "  + Seafood_Misc: 0.244\n",
+      "  - Spinach: 0.240\n",
+      "  + Tomato_Cucumber_Carrot_Pepper: 0.235\n",
+      "  - Legumes: 0.227\n",
+      "  - Meat_Cold_Sliced_LowFat: 0.220\n",
+      "  - Coffee: 0.220\n",
+      "\n",
+      "PC19:\n",
+      "  + Butter_Freq: 0.448\n",
+      "  - Fruits_Dried: 0.342\n",
+      "  + Sweets_Preserved: 0.323\n",
+      "  - Potatoes_Fried: 0.257\n",
+      "  - Seed_Oil_Freq: 0.238\n",
+      "  + Yellow_Cheese: 0.234\n",
+      "  - Chicken: 0.201\n",
+      "\n",
+      "PC20:\n",
+      "  + Beer: 0.340\n",
+      "  - Meat_Cold_Sliced: 0.291\n",
+      "  + Broccoli_Cauliflower_Courgette: 0.242\n",
+      "  - Apples_Pears: 0.236\n",
+      "  + Yellow_Cheese: 0.227\n",
+      "  + Fruits_Dried: 0.222\n",
+      "  + Feta_Cheese: 0.220\n",
+      "\n",
+      "PC21:\n",
+      "  + Milk_Yoghurt: 0.293\n",
+      "  - Seafood_Misc: 0.272\n",
+      "  + Cheese_LowFat: 0.262\n",
+      "  + Beer: 0.258\n",
+      "  + Soda: 0.248\n",
+      "  - Yellow_Cheese: 0.242\n",
+      "  + Meat_Cold_Sliced_LowFat: 0.242\n",
+      "\n",
+      "PC22:\n",
+      "  + Orange: 0.329\n",
+      "  + Pastitsio_Moussaka_Papoutsakia: 0.295\n",
+      "  + Ice_Cream: 0.291\n",
+      "  - Sweets_Preserved: 0.290\n",
+      "  + Margarine_Freq: 0.286\n",
+      "  - Tomato_Cucumber_Carrot_Pepper: 0.245\n",
+      "  - Seafood_Misc: 0.223\n",
+      "\n",
+      "PC23:\n",
+      "  + Butter_Freq: 0.344\n",
+      "  + Yellow_Cheese: 0.284\n",
+      "  + Lamb_Goat_Game: 0.268\n",
+      "  - Sweets_Preserved: 0.256\n",
+      "  - Margarine_Freq: 0.242\n",
+      "  - Pastitsio_Moussaka_Papoutsakia: 0.230\n",
+      "  - Seafood_Misc: 0.228\n",
+      "\n",
+      "PC24:\n",
+      "  + Butter_Freq: 0.256\n",
+      "  + Meat_Cold_Sliced_LowFat: 0.251\n",
+      "  - Pies: 0.250\n",
+      "  - Banana: 0.246\n",
+      "  + Eggs: 0.234\n",
+      "  - Chocolate: 0.219\n",
+      "  + Fruits_Dried: 0.213\n",
+      "\n",
+      "PC25:\n",
+      "  + Winter_Fruits_Misc: 0.348\n",
+      "  + Coffee: 0.290\n",
+      "  + Fish_Small: 0.258\n",
+      "  + Banana: 0.246\n",
+      "  + Potatoes_Fried: 0.237\n",
+      "  - Meat_Cold_Sliced: 0.236\n",
+      "  - Tea: 0.225\n",
+      "\n",
+      "PC26:\n",
+      "  + Eggs: 0.521\n",
+      "  - Pork: 0.299\n",
+      "  + Sweets_Preserved: 0.272\n",
+      "  + Olives: 0.238\n",
+      "  - Potatoes_Boiled: 0.207\n",
+      "  - Nuts: 0.205\n",
+      "  + Petit_Pois: 0.184\n",
+      "\n",
+      "PC27:\n",
+      "  + Cereals: 0.347\n",
+      "  - Pies: 0.339\n",
+      "  + Nuts: 0.338\n",
+      "  - Orange: 0.241\n",
+      "  - Seafood_Misc: 0.224\n",
+      "  - Meat_Cold_Sliced_LowFat: 0.215\n",
+      "  + Eggs: 0.191\n",
+      "\n",
+      "PC28:\n",
+      "  + Pastitsio_Moussaka_Papoutsakia: 0.338\n",
+      "  - Beer: 0.310\n",
+      "  + Alcohold_Misc: 0.273\n",
+      "  - Olive_Oil_Freq: 0.268\n",
+      "  - Olives: 0.259\n",
+      "  - Veal: 0.236\n",
+      "  - Potatoes_Fried: 0.229\n",
+      "\n",
+      "PC29:\n",
+      "  + Lamb_Goat_Game: 0.377\n",
+      "  + Veal: 0.376\n",
+      "  + Legumes: 0.300\n",
+      "  - Orange: 0.260\n",
+      "  + Seafood_Misc: 0.233\n",
+      "  + Ice_Cream: 0.229\n",
+      "  - Meat_Cold_Sliced: 0.213\n",
+      "\n",
+      "PC30:\n",
+      "  + Coffee: 0.331\n",
+      "  + Tea: 0.314\n",
+      "  + Salty_Snacks: 0.294\n",
+      "  - Ice_Cream: 0.274\n",
+      "  + Feta_Cheese: 0.268\n",
+      "  + Lamb_Goat_Game: 0.248\n",
+      "  - Sweets_Preserved: 0.236\n"
      ]
     }
    ],
@@ -532,29 +758,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "id": "2e159881",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "59"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LASSO selected 38 foods:\n",
+      "  White_Bread_ZC: -0.058\n",
+      "  Soda_ZC: -0.040\n",
+      "  Milk_Yoghurt_ZC: -0.035\n",
+      "  Olive_Oil_Freq_ZC: -0.030\n",
+      "  Sausages_ZC: -0.024\n",
+      "  Eggs_ZC: -0.024\n",
+      "  Honey_Marmalade_ZC: -0.019\n",
+      "  Legumes_ZC: -0.003\n",
+      "  Apples_Pears_ZC: -0.001\n",
+      "  Pies_ZC: -0.001\n",
+      "  Chicken_ZC: 0.003\n",
+      "  Pastitsio_Moussaka_Papoutsakia_ZC: 0.004\n",
+      "  Tea_ZC: 0.004\n",
+      "  Winter_Fruits_Misc_ZC: 0.005\n",
+      "  Wine_ZC: 0.005\n",
+      "  Fish_Large_ZC: 0.006\n",
+      "  Milk_Yoghurt_LowFat_ZC: 0.006\n",
+      "  White_Rice_ZC: 0.007\n",
+      "  Chocolate_ZC: 0.008\n",
+      "  Alcohold_Misc_ZC: 0.009\n",
+      "  Banana_ZC: 0.011\n",
+      "  Brown_Rice_ZC: 0.012\n",
+      "  Meat_Balls_ZC: 0.016\n",
+      "  Fruits_Dried_ZC: 0.020\n",
+      "  Coffee_ZC: 0.020\n",
+      "  Pork_ZC: 0.022\n",
+      "  Beer_ZC: 0.023\n",
+      "  Lettuce_Cabbage_Spinach_Rocket_ZC: 0.029\n",
+      "  Broccoli_Cauliflower_Courgette_ZC: 0.030\n",
+      "  Mayonnaise_ZC: 0.031\n",
+      "  Nuts_ZC: 0.034\n",
+      "  Cheese_LowFat_ZC: 0.035\n",
+      "  Pasta_Wholemeal_ZC: 0.041\n",
+      "  Cereals_ZC: 0.048\n",
+      "  Olives_ZC: 0.049\n",
+      "  Yellow_Cheese_ZC: 0.058\n",
+      "  Petit_Pois_ZC: 0.073\n",
+      "  Summer_Fruits_Misc_ZC: 0.074\n"
+     ]
     }
    ],
    "source": [
-    "len(heliad_raw.columns.to_list())"
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "X = food_data_z\n",
+    "y = heliad_nutri['ZCO']\n",
+    "\n",
+    "\n",
+    "lasso = LassoCV(cv=5, random_state=42, max_iter=10000)\n",
+    "lasso.fit(X, y)\n",
+    "\n",
+    "\n",
+    "selected_foods = pd.Series(lasso.coef_, index=food_data.columns)\n",
+    "selected_foods = selected_foods[selected_foods != 0].sort_values()\n",
+    "\n",
+    "print(f\"LASSO selected {len(selected_foods)} foods:\")\n",
+    "for food, coef in selected_foods.items():\n",
+    "    print(f\"  {food}: {coef:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b7a1060b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PC1 selected, coefficient: 0.130\n",
+      "PC2 selected, coefficient: -0.047\n",
+      "PC3 selected, coefficient: 0.026\n",
+      "PC4 selected, coefficient: -0.024\n",
+      "PC5 selected, coefficient: 0.031\n",
+      "PC6 selected, coefficient: -0.020\n",
+      "PC7 selected, coefficient: -0.019\n",
+      "PC8 selected, coefficient: -0.027\n",
+      "PC9 selected, coefficient: -0.027\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca_scores = pca.transform(food_data_z)[:, :10]  # First 10 PCs\n",
+    "\n",
+    "lasso_pca = LassoCV(cv=5)\n",
+    "lasso_pca.fit(pca_scores, y)\n",
+    "\n",
+    "for i, coef in enumerate(lasso_pca.coef_):\n",
+    "    if coef != 0:\n",
+    "        print(f\"PC{i+1} selected, coefficient: {coef:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb99928c",
    "metadata": {},
    "outputs": [],
    "source": []
