LASSO finalized w. permutation check

--- a/Heliad-KBest-Pickup.ipynb
+++ b/Heliad-KBest-Pickup.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "03297928",
    "metadata": {},
    "outputs": [
@@ -507,8 +507,8 @@
     "    else:\n",
     "        continues.append(col)\n",
     "\n",
-    "X.fillna(X[discrete].mode().iloc[0], inplace=True)  # Impute NaN in columns with discrete values\n",
-    "X.fillna(X[continues].mean(), inplace=True)  # Impute NaN in columns with continues values"
+    "X.fillna(X[discrete].mode().iloc[0], inplace=True)\n",
+    "X.fillna(X[continues].mean(), inplace=True)"
    ]
   },
   {
